# meeting_cost_tracker

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs  meeting.rs  model.rs  storage.rs
tests/: integration.rs  tests.rs
