[package]
name = "meeting_cost_tracker"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Sims andrew,simsd.@gmail.com"]
description = "A terminal UI tool to track meeting cost in real time based on employee salaries."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Andrewsimsd/meeting_cost_tracker"
homepage = "https://github.com/Andrewsimsd/meeting_cost_tracker"
readme = "README.md"
repository = "https://github.com/yourusername/meeting_cost_tracker"
keywords = ["tui", "ratatui", "meeting", "salary", "tracker"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
ratatui = "0.29"
crossterm = "0.29.0"
serde = { version = "1", features = ["derive"] }
toml = "0.9.2"
thiserror = "2.0.12"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[[bin]]
name = "meeting_cost_tracker"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
